Closed
Bug 1263116
Opened 9 years ago
Closed 9 years ago
Stop throwing for DOMTokenList's.contains() when using empty string or ASCII whitespace
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla49
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: crimsteam, Assigned: ben.tian)
Details
(Whiteboard: btpp-close [tw-dom])
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:45.0) Gecko/20100101 Firefox/45.0
Build ID: 20160315153207
Steps to reproduce:
https://github.com/whatwg/dom/issues/202
https://dom.spec.whatwg.org/#dom-domtokenlist-contains
| Reporter | ||
Updated•9 years ago
|
Component: General → DOM
| Assignee | ||
Comment 2•9 years ago
|
||
I'll work on this bug.
Assignee: nobody → btian
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 3•9 years ago
|
||
baku, can you review my patch that makes DOMTokenList.contains() not throw per comment 0?
Try result with my patch:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=aca2136e5eef
Attachment #8749071 -
Flags: review?(amarchesini)
Updated•9 years ago
|
Attachment #8749071 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Updated•9 years ago
|
Attachment #8749071 -
Attachment description: Patch 1 (v1): Stop throwing for DOMTokenList's.contains() when using empty string or ASCII whitespace → [final] Patch 1: Stop throwing for DOMTokenList's.contains() when using empty string or ASCII whitespace, r=baku
Updated•9 years ago
|
Whiteboard: btpp-fixlater [tw-dom] → btpp-active [tw-dom]
Comment 5•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox49:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
| Assignee | ||
Updated•9 years ago
|
Whiteboard: btpp-active [tw-dom] → btpp-close [tw-dom]
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•